# ModITM

./: .gitignore  README.md  docker-compose.attackers.yaml  docker-compose.victims.yaml  docker-compose.yaml  llm-compose.victims.yaml
attacker/: Dockerfile  before.rules  reverse_proxy.conf  startup.sh
cartridges/: codellama.yaml
codellama/: startup.sh
config/: config.yaml
images/: preprocess_cfair.py  pyproject.toml
interceptor/: Dockerfile  config.yaml  interceptor.py  pyproject.toml
interceptor/model/: __init__.py  fake_model.py  resnet.py  yolo.py
llm_demo/: llm-compose.attackers.yaml  llm-compose.victims.yaml
llm_demo/attackers/code_interceptor/: Dockerfile  code_interceptor.py  pyproject.toml  startup.sh
llm_demo/attackers/evil_proxy/: Dockerfile  nginx.conf  startup.sh
llm_demo/attackers/model_puller/: modelnames.txt
llm_demo/codellama/: Dockerfile  startup.sh
llm_demo/evil_proxy/: nginx.conf
llm_demo/nano-bots-api-debug/: Dockerfile
llm_demo/victims/model_puller/: modelnames.txt  pull.sh
model/: yolo.py
reverse_proxy/: reverse_proxy.conf
server/: Dockerfile  pyproject.toml  server.py
server/css/: main.css
server/html/: index.html
server/js/: main.js
victim/: Dockerfile
