[tool.poetry]
name = "server"
version = "0.1.0"
description = "server for MODITM demo"
authors = ["Birdwainer <birdwainer@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
