[tool.poetry]
name = "code-interceptor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "code_interceptor"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pdbpp = "^0.10.3"
bottle = "^0.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
